Archive2/c7/4ff2b600671afd/output
main.cpp: In function 'int main()':
main.cpp:12:5: error: 'ExClass::ExClass(int)' is private
     ExClass(int d) : data(d) { cout<<"Constructor"<<endl; }
     ^
main.cpp:17:18: error: within this context
     ExClass var(2);
                  ^
main.cpp:12:5: error: 'ExClass::ExClass(int)' is private
     ExClass(int d) : data(d) { cout<<"Constructor"<<endl; }
     ^
main.cpp:18:20: error: within this context
     ExClass var2 = 2;
                    ^
main.cpp:8:5: error: 'ExClass::ExClass(const ExClass&)' is private
     ExClass(const ExClass&);
     ^
main.cpp:18:20: error: within this context
     ExClass var2 = 2;
                    ^
